--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,22 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    id: Build Image
+    id: Build
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA', '.']
-  
+
   - name: 'gcr.io/cloud-builders/docker'
-    id: Push Image
+    id: Push
     args: ['push', 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA']
-  
+
   - name: 'gcr.io/cloud-builders/gcloud'
-    id: Deploy to Cloud Run
+    id: Deploy
     args: [
       'run', 'deploy', 'fastapi-trace-demo',
       '--image', 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA',
       '--region', 'us-central1',
       '--platform', 'managed',
-      '--allow-unauthenticated'
+      '--allow-unauthenticated',
+      '--set-env-vars', 'OTEL_EXPORTER_OTLP_ENDPOINT=http://34.9.8.45:4318'
     ]
 
 images:
   - 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA'
-
-options:
-  logging: CLOUD_LOGGING_ONLY
