--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    id: Build
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/trace-demo', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    id: Push
-    args: ['push', 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/trace-demo']
 
-  - name: 'gcr.io/cloud-builders/gcloud'
-    id: Deploy
-    args:
-      - run
-      - deploy
-      - fastapi-trace-demo
-      - --image
-      - gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA
-      - --region
-      - us-central1
-      - --platform
-      - managed
-      - --allow-unauthenticated
-      - --set-env-vars
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://34.9.8.45:4318
-
-images:
-  - 'gcr.io/$PROJECT_ID/fastapi-trace-demo:$SHORT_SHA'
-  
-options:
-  logging: CLOUD_LOGGING_ONLY
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['run', 'gcr.io/$PROJECT_ID/trace-demo']
